k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deep-research-ingress
  namespace: deep-research
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "deep-research-ip"
    networking.gke.io/managed-certificates: "deep-research-ssl-cert"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "deep-research-backend-config"}'
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  rules:
  - host: ${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deep-research-backend
            port:
              number: 8000
